syntax = "proto3";

package api.product.service.v1;

import "google/api/annotations.proto";

option go_package = "mall/api/product/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.product.service.v1";

service Product {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductReply){
        option (google.api.http) = {
          post: "/product"
          body: "*"
        };
    };
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductReply);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductReply);
    rpc GetProduct (GetProductRequest) returns (GetProductReply);
    rpc ListProduct (ListProductRequest) returns (ListProductReply);
}

message CreateProductRequest {
    int64  id = 1;
    string name = 2;
    string sku = 3;
    int64 price = 4;
    string description = 5;
    repeated Image image = 6;
    repeated Size size = 7;
    Seo seo = 8;
}

message Size {
    int64 id = 1;
    string name = 2;
    string code = 3;
}

message Image {
    int64 id = 1;
    string name = 2;
    string code = 3;
    string url = 4;
}

message Seo {
    int64 id = 1;
    string title = 2;
    string keywords = 3;
    string description = 4;
    string code = 5;
}

message CreateProductReply {
    int64 id = 1;
}

message UpdateProductRequest {

}
message UpdateProductReply {}

message DeleteProductRequest {}
message DeleteProductReply {}

message GetProductRequest {}
message GetProductReply {}

message ListProductRequest {}
message ListProductReply {}